--- a/app/src/main/res/layout/email_password.xml
+++ b/app/src/main/res/layout/email_password.xml
@@ -9,13 +9,13 @@
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="#00BCD4"
         android:textColorHint="#00BCD4"
         android:textSize="30sp"
@@ -26,12 +26,12 @@
 
     <EditText
         android:id="@+id/editTextEmail"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Correo"
         android:inputType="textEmailAddress"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="#00BCD4"
         android:textColorHint="#00BCD4"
         android:textSize="30sp"
@@ -40,6 +40,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="60dp"
@@ -49,28 +50,44 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword">
 
-        <Button
-            android:id="@+id/buttonRegistrar"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="Registrar"
-            android:textSize="24sp" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/buttonIniciar"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="Iniciar"
-            android:textSize="24sp" />
+            <Button
+                android:id="@+id/buttonRegistrar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Registrar"
+                android:textSize="24sp" />
+
+            <Button
+                android:id="@+id/buttonIniciar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Iniciar"
+                android:textSize="24sp" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/buttonSalir"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:text="Salir"
             android:textSize="24sp" />
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonAtras"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Atras"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
