--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,10 +15,10 @@
             android:id="@+id/textViewMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="MENU"
+            android:text="OPCIONES DE INICIO"
             android:textAlignment="center"
             android:textColor="#03A9F4"
-            android:textSize="50sp" />
+            android:textSize="40sp" />
 
         <Space
             android:layout_width="match_parent"
