--- a/app/src/main/res/layout/activity_juego_p_p_t.xml
+++ b/app/src/main/res/layout/activity_juego_p_p_t.xml
@@ -39,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Mano"
+                android:text="Piedra, Papel, Tijera"
                 android:textAlignment="center"
                 android:textColor="#F44336"
                 android:textSize="30sp" />
@@ -47,9 +47,26 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_height="503dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/textViewPuntosPersonaje"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="0"
+                android:textAlignment="center"
+                android:textColor="#00BCD4"
+                android:textSize="36sp" />
+
+            <Button
+                android:id="@+id/buttonVS"
+                android:layout_width="match_parent"
+                android:layout_height="77dp"
+                android:layout_weight="1"
+                android:text="VS"
+                android:textSize="50sp" />
 
             <TextView
                 android:id="@+id/textViewPuntosBot"
@@ -61,24 +78,11 @@
                 android:textColor="#F44336"
                 android:textSize="36sp" />
 
-            <Button
-                android:id="@+id/buttonVS"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="VS"
-                android:textSize="50sp" />
-
-            <TextView
-                android:id="@+id/textViewPuntosPersonaje"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="0"
-                android:textAlignment="center"
-                android:textColor="#00BCD4"
-                android:textSize="36sp" />
         </LinearLayout>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -136,13 +140,25 @@
                 android:layout_height="15dp"
                 android:layout_weight="1" />
 
-            <TextView
-                android:id="@+id/textViewUsuario"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="   Ejemplo"
-                android:textColor="#FFFFFF" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textViewUsuario"
+                    android:layout_width="323dp"
+                    android:layout_height="match_parent"
+                    android:text="   Ejemplo"
+                    android:textColor="#FFFFFF" />
+
+                <Button
+                    android:id="@+id/buttonAtrasJuego"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Atras" />
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
